--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "eslint-config-next": "13.1.1",
         "next": "13.1.1",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "react-feather": "^2.0.10"
     },
     "devDependencies": {
         "@types/node": "18.11.3",
